[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biospc"
version = "0.1.0"
description = "biospc"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["single-cell", "pseudotime", "tipping-point", "trajectory", "bioinformatics"]

authors = [
    {name = "Bio-SPC Team"},
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scanpy>=1.9.0",
    "torch>=1.10.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "anndata>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/clyty019/biospc"
Repository = "https://github.com/clyty019/biospc"
