[metadata]
name = biospc
version = 0.1.0
description = Bio-SPC: 基于单细胞数据寻找拟时间轨迹断崖点的 Python 库
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-username/biospc
author = Bio-SPC Team
author_email = 
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics
    Intended Audience :: Science/Research

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20.0
    pandas>=1.3.0
    scanpy>=1.9.0
    torch>=1.10.0
    scikit-learn>=1.0.0
    scipy>=1.7.0
    matplotlib>=3.5.0
    anndata>=0.8.0

[options.packages.find]
include = biospc*
